archiv/03-ingress-argocd-internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-internal
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: cloudflare
    traefik.ingress.kubernetes.io/router.middlewares: traefik-allow-lan@kubernetescrd
spec:
  rules:
  - host: argocd.intern.h47.eu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            # Falls dein Service anders heißt, hier anpassen:
            name: argo-cd-argocd-server
            port:
              number: 80
  tls:
  - hosts:
    - argocd.intern.h47.eu
